# coq-qfbv

./: .gitignore  .gitmodules  .project  CoqMakefile.conf  Makefile  Makefile.coq  Makefile.coq.conf  README.md  _CoqProject  _CoqProjectSimple  build-dev.sh  setup-ubuntu
examples/FourQ/: fp2add1271.cl  fp2sub1271.cl
examples/qhasm/: fe25519_add.cl  fe25519_sub.cl  fe25519r64_add.cl  fe25519r64_sub.cl
paper/s&p201906/: bitblasting.tex  cryptoline.tex  evaluation.tex  ex.cl  introduction.tex  macros.tex  main.tex  proofs.tex  qfbv-semantics.tex
src/: AdhereConform.v  BBAdd.v  BBAddSimple.v  BBAnd.v  BBAndSimple.v  BBAshr.v  BBAshrSimple.v  BBCommon.v  BBCommonSimple.v  BBComp.v  BBConcat.v  BBConcatSimple.v  BBConj.v  BBConjSimple.v  BBConst.v  BBConstSimple.v  BBDisj.v  BBDisjSimple.v  BBEq.v  BBEqSimple.v  BBExport.v  BBExportSimple.v  BBExtract.v  BBExtractSimple.v  BBHigh.v  BBHighSimple.v  BBIte.v  BBIteSimple.v  BBLneg.v  BBLnegSimple.v  BBLow.v  BBLowSimple.v  BBLshr.v  BBLshrSimple.v  BBMul.v  BBMulSimple.v  BBNeg.v  BBNegSimple.v  BBNot.v  BBNotSimple.v  (+83 more)
src/bbcache/: BitBlastingCCache.v  BitBlastingCCacheAdhere.v  BitBlastingCCacheBound.v  BitBlastingCCacheConsistent.v  BitBlastingCCacheCorrect.v  BitBlastingCCacheDef.v  BitBlastingCCacheDefGeneral.v  BitBlastingCCacheExport.v  BitBlastingCCacheFind.v  BitBlastingCCacheFlatten.v  BitBlastingCCacheGeneral.v  BitBlastingCCacheHash.v  BitBlastingCCacheMkEnv.v  BitBlastingCCacheNewer.v  BitBlastingCCacheSat.v  (+30 more)
src/ocaml/smtlib/: ast.ml  ast.mli  dune  parser.ml  parser.mli  smtlibLexer.mll  smtlibParser.mly
(+290 files in other folders)
